# quasar-typing

./: .gitignore  README.md  pyproject.toml
src/quasar_typing/: __init__.py  bounds.py  compound_model.py
src/quasar_typing/arrays/: __init__.py  bool.py
src/quasar_typing/astropy/: __init__.py  column.py  composite_unit.py  compound_model.py  fit_info.py  fittable_1d_model.py  fitter.py  hdu_list.py  model.py  qtable.py  quantity.py  sky_coord.py  unit.py
src/quasar_typing/astropy/utils/: model_meta.py
src/quasar_typing/bounds/: __init__.py  astropy_bounds.py  coord_bounds.py
src/quasar_typing/dataframe/: dataframe.py  linelist.py
src/quasar_typing/logging/: __init__.py  filehandler.py  logger.py
src/quasar_typing/misc/: __init__.py  any.py  astropy.py  custom_models.py  error.py  error_result.py  literals.py  logger.py  logging.py  pool.py  random.py  string_selection.py
src/quasar_typing/numpy/: __init__.py  array.py  coords_tuple.py  fittable_array.py  fittable_coords_tuple.py  float.py  int.py  random_state.py  sorted_array.py  utils.py
src/quasar_typing/pandas/: __init__.py  dataframe.py  linelist.py
src/quasar_typing/pathlib/: __init__.py  path.py
src/quasar_typing/paths/: __init__.py  dir.py  file.py  fits.py  path.py  utils.py
src/quasar_typing/scipy/: __init__.py  sparse.py  stats.py
tests/: __init__.py  test_numpy.py
tests/bounds/: test_bounds.py
tests/misc/: test_misc.py  test_string_selection.py
tests/numpy/: __init__.py  test_array_.py  test_coords_tuple.py  test_fittable_array.py  test_integration.py  test_random_state.py  test_sorted_array.py
tests/pathlib/: test_paths.py
